--- a/TwoWayPicker/package.json
+++ b/TwoWayPicker/package.json
@@ -9,22 +9,22 @@
     "url": ""
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "load-grunt-tasks": "~0.3.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-less": "~0.9.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-template": "~0.2.2",
-    "grunt-nuget": "~0.1.1",
-    "grunt-mkdir": "~0.1.1",
-    "grunt-umbraco-package": "~0.0.3",
-    "time-grunt": "~0.2.10",
-    "grunt-karma": "^0.8.3",
-    "karma": "^0.12.16",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "grunt": "~1.0.3",
+    "grunt-contrib-clean": "~2.0.0",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-less": "~2.0.0",
+    "grunt-contrib-watch": "~1.1.0",
+    "grunt-karma": "^3.0.0",
+    "grunt-mkdir": "~1.0.0",
+    "grunt-nuget": "~0.3.0",
+    "grunt-template": "~1.0.0",
+    "grunt-umbraco-package": "~1.0.0",
+    "karma": "^3.0.0",
+    "karma-jasmine": "^1.1.2",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "load-grunt-tasks": "~4.0.0",
+    "time-grunt": "~1.4.0"
   }
 }
