--- a/TwoWayPicker/App_Data/umbraco.config
+++ b/TwoWayPicker/App_Data/umbraco.config
@@ -2109,12 +2109,14 @@
     <productFamily id="1090" key="8e2f4a12-e34d-4abd-91da-3b41fc4dc4ea" parentID="1063" level="2" creatorID="0" sortOrder="8" createDate="2016-11-14T14:25:58" updateDate="2016-11-14T14:54:34" nodeName="F1" urlName="f1" path="-1,1063,1090" isDoc="" nodeType="1086" creatorName="Logan Peck" writerName="Logan Peck" writerID="0" template="1085" nodeTypeAlias="productFamily">
       <products><![CDATA[1087]]></products>
     </productFamily>
-    <productFamily id="1091" key="f30db51d-d033-4a5e-8d4e-431f42793a48" parentID="1063" level="2" creatorID="0" sortOrder="9" createDate="2016-11-14T14:26:06" updateDate="2017-05-17T14:26:18" nodeName="F2" urlName="f2" path="-1,1063,1091" isDoc="" nodeType="1086" creatorName="Logan Peck" writerName="Logan Peck" writerID="0" template="1085" nodeTypeAlias="productFamily">
-      <products><![CDATA[1087]]></products>
+    <productFamily id="1091" key="f30db51d-d033-4a5e-8d4e-431f42793a48" parentID="1063" level="2" creatorID="0" sortOrder="9" createDate="2016-11-14T14:26:06" updateDate="2018-09-27T16:24:31" nodeName="F2" urlName="f2" path="-1,1063,1091" isDoc="" nodeType="1086" creatorName="Logan Peck" writerName="Logan Peck" writerID="0" template="1085" nodeTypeAlias="productFamily">
+      <products><![CDATA[1087,1095]]></products>
     </productFamily>
     <productFamily id="1092" key="d990a2c4-7e85-42af-b07a-84b5c6962dd9" parentID="1063" level="2" creatorID="0" sortOrder="10" createDate="2016-11-14T14:26:14" updateDate="2016-11-14T14:26:14" nodeName="F3" urlName="f3" path="-1,1063,1092" isDoc="" nodeType="1086" creatorName="Logan Peck" writerName="Logan Peck" writerID="0" template="1085" nodeTypeAlias="productFamily" />
     <retiredProduct id="1093" key="32e954b7-ecd6-4517-a8c7-473ca5332c9a" parentID="1063" level="2" creatorID="0" sortOrder="11" createDate="2016-11-14T14:26:21" updateDate="2016-11-14T14:54:34" nodeName="R1" urlName="r1" path="-1,1063,1093" isDoc="" nodeType="1084" creatorName="Logan Peck" writerName="Logan Peck" writerID="0" template="1083" nodeTypeAlias="retiredProduct" />
     <retiredProduct id="1094" key="a91d26ee-4770-4f12-aa82-e1035992e1de" parentID="1063" level="2" creatorID="0" sortOrder="12" createDate="2016-11-14T14:26:29" updateDate="2016-11-14T14:26:29" nodeName="R2" urlName="r2" path="-1,1063,1094" isDoc="" nodeType="1084" creatorName="Logan Peck" writerName="Logan Peck" writerID="0" template="1083" nodeTypeAlias="retiredProduct" />
-    <retiredProduct id="1095" key="6937b40d-591e-416a-8e0e-5a11a3128131" parentID="1063" level="2" creatorID="0" sortOrder="13" createDate="2016-11-14T14:26:36" updateDate="2016-11-14T14:26:36" nodeName="R3" urlName="r3" path="-1,1063,1095" isDoc="" nodeType="1084" creatorName="Logan Peck" writerName="Logan Peck" writerID="0" template="1083" nodeTypeAlias="retiredProduct" />
+    <retiredProduct id="1095" key="6937b40d-591e-416a-8e0e-5a11a3128131" parentID="1063" level="2" creatorID="0" sortOrder="13" createDate="2016-11-14T14:26:36" updateDate="2018-09-27T16:24:30" nodeName="R3" urlName="r3" path="-1,1063,1095" isDoc="" nodeType="1084" creatorName="Logan Peck" writerName="support@scyllagroup.com" writerID="1" template="1083" nodeTypeAlias="retiredProduct">
+      <family><![CDATA[1091]]></family>
+    </retiredProduct>
   </Home>
 </root>
